samples/_failures_safe/1761292634_137c39_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b78f8f4c.c: In function ‘tokenize’:
./samples/SAFE/__tmp_b78f8f4c.c:184: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_b78f8f4c.c:183:13: error: expected declaration or statement at end of input
  183 |             if
      |             ^~
./samples/SAFE/__tmp_b78f8f4c.c:183:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b78f8f4c.c:183:13: error: expected declaration or statement at end of input
